--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/custom")
     @Scripts.Render("~/bundles/combodate")
+    @RenderSection("scripts1", required: false)
     @RenderSection("scripts", required: false)
 
 
