--- a/CatchMe/Views/Shared/_searchFilter.cshtml
+++ b/CatchMe/Views/Shared/_searchFilter.cshtml
@@ -11,18 +11,19 @@
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label" })                
-                @Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("status", null, htmlAttributes: new { @class = "chosen-select-multi", @multiple="multiple" })
                 @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
             </div>
         
-            <div class="col-md-3">
+            <div class="col-md-4">
                 @Html.LabelFor(model => model.priority, htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("priority", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("priority", null, htmlAttributes: new { @class = "chosen-select-multi", @multiple = "multiple" })
                 @Html.ValidationMessageFor(model => model.priority, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-3">
+            
+            <div class="col-md-4">
                 @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label " })
                 @Html.DropDownList("type", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
@@ -30,19 +31,21 @@
         </div>
 
         <div class="form-group">
+            
+
             <div class="col-md-3">
             @Html.LabelFor(model => model.createdBy, htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("createdBy", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("createdBy", null, htmlAttributes: new { @class = "chosen-select-multi", @multiple = "multiple" })
                 @Html.ValidationMessageFor(model => model.createdBy, "", new { @class = "text-danger" })
             </div>
             <div class="col-md-3">
                 @Html.LabelFor(model => model.owner, htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("owner", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("owner", null, htmlAttributes: new { @class = "chosen-select-multi", @multiple = "multiple" })
                 @Html.ValidationMessageFor(model => model.owner, "", new { @class = "text-danger" })
             </div>
             <div class="col-md-3">
                 @Html.LabelFor(model => model.assignedTo, htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("assignedTo", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("assignedTo", null, htmlAttributes: new { @class = "chosen-select-multi", @multiple = "multiple" })
                 @Html.ValidationMessageFor(model => model.assignedTo, "", new { @class = "text-danger" })
             </div>
         </div>
