--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -15,7 +15,7 @@
         
                 }
 
-        <h2><span class="fa fa-plus-circle"></span>&nbsp;New Task for @session.Current.CurrentProject</h2>
+        <h2><span class="fa fa-plus-circle"></span>&nbsp;Create Task</h2>
 
 
         @using (Html.BeginForm())
@@ -23,7 +23,7 @@
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>task</h4>
+                <h4 class="text-primary" style="margin-left:4%">@session.Current.CurrentProject</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -40,7 +40,7 @@
                     @Html.LabelFor(model => model.assigned_to, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
 
-                        @Html.DropDownList("assigned_to", null, new { @class = "form-control" })
+                        @Html.DropDownList("assigned_to", null, new { @class = "form-control chosen-select" })
                         @Html.ValidationMessageFor(model => model.assigned_to, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.complexity, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
-                        @Html.DropDownList("complexity", null,  new { @class = "form-control" })
+                        @Html.DropDownList("complexity", null,  new { @class = "form-control chosen-select" })
                         @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.priority, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
-                        @Html.DropDownList("priority", null, new { @class = "form-control" } )
+                        @Html.DropDownList("priority", null, new { @class = "form-control chosen-select" } )
                         @Html.ValidationMessageFor(model => model.priority, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -119,16 +119,7 @@
                 </div>
 
 
-                @*<div class="form-group">
-                    @Html.LabelFor(model => model.due_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-                        @*data-format="DD-MM-YYYY" data-template="D MMM YYYY" name="date" value="09-01-2013"
-                        @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control combodate",
-                                @data_format ="YYYY-MM-DD" ,@data_template="D MMM YYYY" } })
-                        @Html.ValidationMessageFor(model => model.due_date, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            *@
+         
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-6">
