--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -46,8 +46,8 @@
                 }
 
                 <a href="#" class="showsection" data-sectionnum=".section2"><span class="fa fa-envelope"></span>&nbsp;Notify </a>&nbsp;|&nbsp;
-                <a href="#" class="showsection" data-sectionnum=".section3"><span class="fa fa-history"></span>&nbsp;History</a>&nbsp;|&nbsp;
-                <a href="#" class="showsection" data-sectionnum=".section4"><span class="fa fa-paperclip"></span>&nbsp;Attachments (@Model.attachments.Count)</a>&nbsp;|&nbsp;
+                <a href="#" class="showsection" data-sectionnum=".section3"><span class="fa fa-history"></span>&nbsp;History (@Model.History.Count)</a>&nbsp;|&nbsp;
+                <a href="#" class="showsection" data-sectionnum=".section4"><span class="fa fa-paperclip"></span>&nbsp;<span class="@(Model.attachments.Count>0?"boldme":"")"> Attachments (@Model.attachments.Count)</span></a>&nbsp;|&nbsp;
                 <a href="javascript:void(0);" class="expandall" title="show all"><span class="fa fa-expand"></span></a>
                 <a href="javascript:void(0);" class="collapseall" title="collapse all"><span class="fa fa-compress"></span></a>
                 <br />
@@ -201,46 +201,49 @@
                             <div class="col-md-12">
                                 <a href="@Url.Content(string.Format("~/uploads/{0}", att.filepath))" target="_blank"><span class="fa fa-@(att.icon)"></span> @att.filename (@att.size)</a>
                                 &nbsp;
-                                
+
                                 @if (session.Current.UserId == att.user_id || session.Current.IsAdmin || !is_readonly)
                                 {
-                                    <a href="@Url.Action("DeleteAttachment",new { id = att.attachment_id, taskid = Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash"></span></a>                                    
+                                    <a href="@Url.Action("DeleteAttachment",new { id = att.attachment_id, taskid = Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash"></span></a>
                                 }
                             </div>
                         }
 
                     </div>
-                    
+                    <br />
+                    <a href="#" class="shownextsection"><small><span class="fa fa-plus"></span>&nbsp;New Attachment</small></a>
+                        <section style="display:none">
                     <div class="row">
-                       
 
-                        <hr />
-                   @*     @using (Html.BeginForm("UploadFile", "Tasks", FormMethod.Post, new { @class = "form-horizontal" }))*@
+                            <hr />
+                            @*     @using (Html.BeginForm("UploadFile", "Tasks", FormMethod.Post, new { @class = "form-horizontal" }))*@
                             @using (Html.BeginForm("UploadFile", "Tasks", FormMethod.Post,
     new { enctype = "multipart/form-data" }))
                             {
-                            @Html.AntiForgeryToken()
-                            <input type="hidden" name="taskId" value="@Model.task_id" />
-                            <input type="hidden" name="projectId" value="@Model.project_id" />
-                            <div class="row">
-                                <div class="col-md-4">
-                            <input type="file" name="file" />
+                                @Html.AntiForgeryToken()
+                                <input type="hidden" name="taskId" value="@Model.task_id" />
+                                <input type="hidden" name="projectId" value="@Model.project_id" />
+                                <div class="row">
+                                    <div class="col-md-offset-1 col-md-4" >
+                                        <input type="file" name="file" />
 
-                                </div>
-                                <div class="col-md-4">
-                            <input type="submit" class="btn btn-info" value="Attach" />
+                                    </div>
+                                    <div class="col-md-4">
+                                        <input type="submit" class="btn btn-info" value="Attach" />
 
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <small class="text-muted">Files accepted: excel, word, powerpoint, text, jpeg, png</small>
+                                <div class="row">
+                                    <div class="col-md-offset-1 col-md-8">
+                                        <small class="text-muted">Files accepted: excel, word, powerpoint, text, jpeg, png</small>
+                                    </div>
                                 </div>
-                            </div>
 
-                        }
-                        <hr />
-                        </div>
+                            }
+                            <hr />
+                    </div>
+
+                </section>
                     </section>
 
                         <br /><br />
@@ -256,7 +259,12 @@
                             <section class="allcomments" style="display:@(cnt<3?"block":"none")">
                                 <h4 style="word-break:break-all">
                                     <span style="word-wrap:break-word">
+                                       
+                                        @if(!string.IsNullOrWhiteSpace(comment.description))
+                                        {
                                         @Html.Raw(comment.description.Replace(Environment.NewLine, "<br/>"))
+                                            
+                                        }
                                     </span>
                                 </h4>
 
